--- a/src/components/InfoPokemon.css
+++ b/src/components/InfoPokemon.css
@@ -1,8 +1,8 @@
 .info-container{
     margin: 20px auto;
     min-height: 100px;
-    width: 450px;
-    padding: 30px;
+    max-width: 400px;
+    padding: 10px;
     border-radius: 10px;
     background-color: #F2DBAE;
   }
@@ -21,7 +21,7 @@ ul{
   }
 
 div.lista{
-  height:150px;
+  height: 150px;
   display: inline-block;
 }
 
