--- a/src/components/SearchPokemon.css
+++ b/src/components/SearchPokemon.css
@@ -3,6 +3,8 @@ p {
     font-size: 1.5em;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
+    max-width: 650px;
+    margin: auto;
 }
 
 input {
